# Reduction

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  docker.yml
docs/: PIPELINE_PLAN.md
examples/: odysseus_integration.py
reduction/: __init__.py  ccr.py  ccr_batch.py  cli.py  config.py  content.py  effort.py  evals.py  install.py  learn.py  mcp_server.py  memory.py  metrics.py  proxy.py  sdk.py
reduction/adapters/: __init__.py  anthropic.py  odysseus.py  openai.py
reduction/gateway/: __init__.py  litellm.config.yaml  main.py
reduction/layers/: __init__.py  caveman.py  codecrush.py  compress.py  contextfit.py  detect.py  diffstat.py  history.py  jsoncrush.py  logcrush.py  normalize.py  ordering.py  semantic_cache.py  shell.py  toon.py
reduction/prompts/: caveman.md
simulator/: simulate.py
tests/: test_adapters.py  test_ccr.py  test_ccr_batch.py  test_cli.py  test_codecrush.py  test_config.py  test_content.py  test_contextfit.py  test_effort.py  test_evals.py  test_gateway.py  test_history.py  test_install.py  test_layers_extra.py  test_learn.py  test_mcp_server.py  test_memory.py  test_metrics.py  test_normalize_shell.py  test_ordering.py  test_proxy.py  test_proxy_integration.py  test_proxy_streaming.py  test_sdk.py  test_toon.py
