[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "reduction"
version = "0.1.0"
description = "Five-layer token-optimization pipeline for AI agents — optimize every input and output"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
keywords = ["llm", "tokens", "cost", "agents", "caching", "compression"]
dependencies = [
    "pydantic>=2.7",
]

[project.optional-dependencies]
gateway = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "litellm>=1.50",
    "pyyaml>=6.0",
]
compress = [
    "llmlingua>=0.2.2",   # Layer 2 — heavy (pulls torch); install only where needed
]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "httpx>=0.27",
    "fastapi>=0.115",
    "pyyaml>=6.0",
]

[project.scripts]
reduction-sim = "simulator.simulate:main"

[tool.setuptools.packages.find]
include = ["reduction*", "simulator*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
