[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "reduction"
version = "0.2.0"
description = "Five-layer token-optimization pipeline for AI agents — optimize every input and output"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
keywords = ["llm", "tokens", "cost", "agents", "caching", "compression"]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "pydantic>=2.7",
]

[project.optional-dependencies]
gateway = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "litellm>=1.50",
    "pyyaml>=6.0",
]
compress = [
    "llmlingua>=0.2.2",   # Layer 2 — heavy (pulls torch); install only where needed
]
tokenizer = [
    "tiktoken>=0.7",      # accurate token counts in metrics (else char heuristic)
]
mcp = [
    "mcp>=1.2",           # expose reduction_compress/retrieve/stats to MCP hosts
]
code = [
    "tree-sitter-language-pack>=0.2",  # accurate AST code compression (else heuristic)
]
memory = [
    "sentence-transformers>=2.2",      # real embeddings (else hashing fallback)
    "hnswlib>=0.8",                    # ANN index for large corpora (else brute force)
]
proxy = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "httpx>=0.27",
    "fastapi>=0.115",
    "pyyaml>=6.0",
    "tiktoken>=0.7",
    "hnswlib>=0.8",   # exercise the ANN search path in CI (light, has wheels)
    "anthropic>=0.40",  # run the install()/adapter tests in CI (light, no torch)
    "openai>=1.40",     # run the install()/adapter tests in CI (light, no torch)
]

[project.urls]
Repository = "https://github.com/krishddd/Reduction"

[project.scripts]
reduction = "reduction.cli:main"
reduction-sim = "simulator.simulate:main"

[tool.setuptools.packages.find]
include = ["reduction*", "simulator*"]

[tool.setuptools.package-data]
reduction = ["py.typed", "prompts/*.md", "gateway/*.yaml"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
